--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rematch/core": "^2.2.0",
     "@rematch/immer": "^2.1.3",
     "@rematch/loading": "^2.1.2",
+    "@toml-tools/parser": "^0.3.1",
     "@types/chalk": "^2.2.0",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
@@ -37,6 +38,7 @@
     "sass": "^1.53.0",
     "styled-components": "^5.3.6",
     "tailwindcss": "^3.1.4",
+    "toml": "^3.0.0",
     "ts-fs": "^0.1.0",
     "uuid": "^9.0.0",
     "vite-plugin-svgr": "^2.2.0",
